--- a/index.html
+++ b/index.html
@@ -3,32 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Dino Game</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="dino__container">
-        <div class="dino__body">
-          <div class="dino__img">
-            <img
-              src="img/Google-Chrome-Guess-The-Font-Dinosaur-Game-Nvidia-Shield-PNG-Free-Download.png"
-              alt=""
-              width="50"
-              height="50"
-            />
-          </div>
-          <div class="dino__cactus">
-            <img
-              src="img/1_Cactus_Chrome_Dino.webp.png"
-              width="50"
-              height="50"
-              alt=""
-            />
-          </div>
-        </div>
-      </div>
+    <div class="play__button">
+      <a class="play" href="main-page.html">Грати</a>
     </div>
-    <script src="js/index.js"></script>
   </body>
 </html>
