--- a/main-page.html
+++ b/main-page.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Press+Start+2P:regular"
+      rel="stylesheet"
+    />
     <title>Dino Game</title>
   </head>
   <body>
@@ -12,15 +16,40 @@
         <h1 class="score--text">Your Score:</h1>
         <p class="score">0</p>
       </div>
+      <img
+        class="cloud__dino"
+        src="img/image.png"
+        width="300"
+        height="150"
+        alt=""
+      />
+      <img
+        class="cloud__dino4"
+        src="img/image.png"
+        width="300"
+        height="150"
+        alt=""
+      />
+      <img
+        class="cloud__dino2"
+        src="img/image.png"
+        width="300"
+        height="150"
+        alt=""
+      />
+
+      <img
+        class="cloud__dino3"
+        src="img/image.png"
+        width="300"
+        height="150"
+        alt=""
+      />
+
       <div class="dino__container">
         <div class="dino__body">
           <div class="dino__img">
-            <img
-              src="img/Google-Chrome-Guess-The-Font-Dinosaur-Game-Nvidia-Shield-PNG-Free-Download.png"
-              alt=""
-              width="50"
-              height="50"
-            />
+            <img src="img/decentdao-dao.gif" alt="" width="80" height="60" />
           </div>
           <div class="dino__cactus">
             <img
@@ -56,5 +85,10 @@
       </div>
     </div>
     <script src="js/index.js"></script>
+    <script
+      type="text/javascript"
+      async
+      src="https://tenor.com/embed.js"
+    ></script>
   </body>
 </html>
