--- a/index.html
+++ b/index.html
@@ -11,8 +11,54 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="play__button">
-      <a class="play" href="main-page.html">Грати</a>
+    <div class="wrapper">
+      <div class="page__logo">
+        <p>ТУТ БУДЕ ЯКЕСЬ ЛОГО (ХАЙ ЗАХАР ПРИДУМАЄ)</p>
+      </div>
+      <div class="page__container">
+        <div class="page__registretion">
+          <div class="page__play--guest">
+            <div class="page__play--guest--body">
+              <a href="main-page.html" class="page__play--guest--button"
+                >PLAY <br />GUEST</a
+              >
+              <a href="" class="page__play--skin--button">SKINS</a>
+            </div>
+          </div>
+          <div class="page__sidebar">
+            <div class="page__login">
+              <form class="login--page__body">
+                <input
+                  type="Username"
+                  placeholder="Username"
+                  class="login--page__username"
+                />
+                <input
+                  type="password"
+                  placeholder="Password"
+                  class="login--page__password"
+                />
+                <input
+                  type="email"
+                  placeholder="Email"
+                  class="login--page__email"
+                />
+              </form>
+              <div class="login--page__buttons">
+                <div class="login--page__buttons--body">
+                  <button class="login--page__button--login">Login</button>
+                  <button class="login--page__button--register">
+                    Register
+                  </button>
+                </div>
+                <a href="" class="login--page__button--forgot"
+                  >Forgot a password?</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
