--- a/main-page.html
+++ b/main-page.html
@@ -49,7 +49,12 @@
       <div class="dino__container">
         <div class="dino__body">
           <div class="dino__img">
-            <img src="img/decentdao-dao.gif" alt="" width="80" height="60" />
+            <img
+              src="skins/cool dino/COOL DINO.gif"
+              alt=""
+              width="60"
+              height="70"
+            />
           </div>
           <div class="dino__cactus">
             <img
