--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <body>
     <div class="wrapper">
       <div class="page__logo">
-        <p>ТУТ БУДЕ ЯКЕСЬ ЛОГО (ХАЙ ЗАХАР ПРИДУМАЄ)</p>
+        <img src="img/games.gif" alt="опис гіфки" />
+        <p class="page__logo__text">DINO GAME</p>
       </div>
       <div class="page__container">
         <div class="page__registretion">
@@ -22,7 +23,7 @@
               <a href="main-page.html" class="page__play--guest--button"
                 >PLAY <br />GUEST</a
               >
-              <a href="" class="page__play--skin--button">SKINS</a>
+              <a href="skins.html" class="page__play--skin--button">SKINS</a>
             </div>
           </div>
           <div class="page__sidebar">
