--- a/main-page.html
+++ b/main-page.html
@@ -50,7 +50,8 @@
         <div class="dino__body">
           <div class="dino__img">
             <img
-              src="skins/cool dino/COOL DINO.gif"
+              class="dino--img--skins"
+              src="skins/original dino/Dino Animation.gif"
               alt=""
               width="60"
               height="70"
@@ -89,7 +90,7 @@
         </div>
       </div>
     </div>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <script
       type="text/javascript"
       async
