--- a/skins.html
+++ b/skins.html
@@ -22,14 +22,18 @@
         </div>
         <div class="skins__body">
           <div class="skins__gridline">
-            <div class="skins__card" onclick="toggleFlip(this)">
+            <div class="skins__card">
               <div class="card">
                 <div class="card-front">
                   <p class="skins__name--dino">Original DINO</p>
-                  <img src="img/Dino Animation.gif" alt="" class="skins__img" />
+                  <img
+                    src="skins/original dino/Dino Animation.gif"
+                    alt=""
+                    class="skins__img"
+                  />
                   <p class="skins__vaulue">0$</p>
                   <div class="skins__take">
-                    <p class="skins__take--button">GET</p>
+                    <p id="OD1" class="skins__take--button">GET</p>
                   </div>
                 </div>
                 <div class="card-back">
@@ -41,18 +45,18 @@
                 </div>
               </div>
             </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
+            <div class="skins__card">
               <div class="card">
                 <div class="card-front">
                   <p class="skins__name--dino">COOl DINO</p>
                   <img
-                    src="skins/cool dino/COOL DINO.gif"
+                    src="skins/cool dino/Dino_cool.gif"
                     alt=""
                     class="skins__img"
                   />
-                  <p class="skins__vaulue">500$</p>
+                  <p class="skins__vaulue">0$</p>
                   <div class="skins__take">
-                    <p class="skins__take--button">BUY</p>
+                    <p id="CD2" class="skins__take--button">GET</p>
                   </div>
                 </div>
                 <div class="card-back">
@@ -64,7 +68,99 @@
                 </div>
               </div>
             </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
+            <div class="skins__card">
+              <div class="card">
+                <div class="card-front">
+                  <p class="skins__name--dino">Flower DINO</p>
+                  <img
+                    src="skins/flower dino/Dino_flower.gif"
+                    alt=""
+                    class="skins__img"
+                  />
+                  <p class="skins__vaulue">0$</p>
+                  <div class="skins__take">
+                    <p id="FD3" class="skins__take--button">GET</p>
+                  </div>
+                </div>
+                <div class="card-back">
+                  <p class="skins__info">
+                    COOL DINO <br />
+                    <br />
+                    Its Cool dino he very cool and strong
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="skins__card">
+              <div class="card">
+                <div class="card-front">
+                  <p class="skins__name--dino">Piviozavr DINO</p>
+                  <img
+                    src="skins/piviozavr dino/Dino_pivozavr.gif"
+                    alt=""
+                    class="skins__img"
+                  />
+                  <p class="skins__vaulue">0$</p>
+                  <div class="skins__take">
+                    <p id="PD4" class="skins__take--button">GET</p>
+                  </div>
+                </div>
+                <div class="card-back">
+                  <p class="skins__info">
+                    COOL DINO <br />
+                    <br />
+                    Its Cool dino he very cool and strong
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="skins__card">
+              <div class="card">
+                <div class="card-front">
+                  <p class="skins__name--dino">Robocop DINO</p>
+                  <img
+                    src="skins/robocop dino/Dino_robocop.gif"
+                    alt=""
+                    class="skins__img"
+                  />
+                  <p class="skins__vaulue">0$</p>
+                  <div class="skins__take">
+                    <p id="RD5" class="skins__take--button">GET</p>
+                  </div>
+                </div>
+                <div class="card-back">
+                  <p class="skins__info">
+                    COOL DINO <br />
+                    <br />
+                    Its Cool dino he very cool and strong
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="skins__card">
+              <div class="card">
+                <div class="card-front">
+                  <p class="skins__name--dino">Snow DINO</p>
+                  <img
+                    src="skins/snow dino/Dino_snow.gif"
+                    alt=""
+                    class="skins__img"
+                  />
+                  <p class="skins__vaulue">0$</p>
+                  <div class="skins__take">
+                    <p id="SD6" class="skins__take--button">GET</p>
+                  </div>
+                </div>
+                <div class="card-back">
+                  <p class="skins__info">
+                    COOL DINO <br />
+                    <br />
+                    Its Cool dino he very cool and strong
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="skins__card">
               <div class="card--lock">
                 <div class="card--lock--img">
                   <img src="img/lock.png" width="70" height="70" alt="" />
@@ -100,7 +196,7 @@
                 </div>
               </div>
             </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
+            <div class="skins__card">
               <div class="card--lock">
                 <div class="card--lock--img">
                   <img src="img/lock.png" width="70" height="70" alt="" />
@@ -136,151 +232,7 @@
                 </div>
               </div>
             </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
-              <div class="card--lock">
-                <div class="card--lock--img">
-                  <img src="img/lock.png" width="70" height="70" alt="" />
-                </div>
-                <div class="card--chain--img1">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img2">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img3">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img4">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-              </div>
-              <div id="cardLock" class="card">
-                <div class="card-front">
-                  <p class="skins__name--dino">?????</p>
-                  <img src="img/question-sign.png" alt="" class="skins__img" />
-                  <p class="skins__vaulue">???$</p>
-                  <div class="skins__take">
-                    <p class="skins__take--button">???</p>
-                  </div>
-                </div>
-                <div class="card-back">
-                  <p class="skins__info">
-                    COOL DINO <br />
-                    <br />
-                    Its Cool dino he very cool and strong
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
-              <div class="card--lock">
-                <div class="card--lock--img">
-                  <img src="img/lock.png" width="70" height="70" alt="" />
-                </div>
-                <div class="card--chain--img1">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img2">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img3">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img4">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-              </div>
-              <div id="cardLock" class="card">
-                <div class="card-front">
-                  <p class="skins__name--dino">?????</p>
-                  <img src="img/question-sign.png" alt="" class="skins__img" />
-                  <p class="skins__vaulue">???$</p>
-                  <div class="skins__take">
-                    <p class="skins__take--button">???</p>
-                  </div>
-                </div>
-                <div class="card-back">
-                  <p class="skins__info">
-                    COOL DINO <br />
-                    <br />
-                    Its Cool dino he very cool and strong
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
-              <div class="card--lock">
-                <div class="card--lock--img">
-                  <img src="img/lock.png" width="70" height="70" alt="" />
-                </div>
-                <div class="card--chain--img1">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img2">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img3">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img4">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-              </div>
-              <div id="cardLock" class="card">
-                <div class="card-front">
-                  <p class="skins__name--dino">?????</p>
-                  <img src="img/question-sign.png" alt="" class="skins__img" />
-                  <p class="skins__vaulue">???$</p>
-                  <div class="skins__take">
-                    <p class="skins__take--button">???</p>
-                  </div>
-                </div>
-                <div class="card-back">
-                  <p class="skins__info">
-                    COOL DINO <br />
-                    <br />
-                    Its Cool dino he very cool and strong
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
-              <div class="card--lock">
-                <div class="card--lock--img">
-                  <img src="img/lock.png" width="70" height="70" alt="" />
-                </div>
-                <div class="card--chain--img1">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img2">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img3">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-                <div class="card--chain--img4">
-                  <img src="img/chains.png" width="110" height="110" alt="" />
-                </div>
-              </div>
-              <div id="cardLock" class="card">
-                <div class="card-front">
-                  <p class="skins__name--dino">?????</p>
-                  <img src="img/question-sign.png" alt="" class="skins__img" />
-                  <p class="skins__vaulue">???$</p>
-                  <div class="skins__take">
-                    <p class="skins__take--button">???</p>
-                  </div>
-                </div>
-                <div class="card-back">
-                  <p class="skins__info">
-                    COOL DINO <br />
-                    <br />
-                    Its Cool dino he very cool and strong
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="skins__card" onclick="toggleFlip(this)">
+            <div class="skins__card">
               <div class="card--lock">
                 <div class="card--lock--img">
                   <img src="img/lock.png" width="70" height="70" alt="" />
@@ -320,6 +272,6 @@
         </div>
       </div>
     </div>
-    <script src="js/skins.js"></script>
+    <script type="module" src="js/skins.js" defer></script>
   </body>
 </html>
