--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="page__play--guest">
             <div class="page__play--guest--body">
               <a href="main-page.html" class="page__play--guest--button"
-                >PLAY <br />GUEST</a
+                >PLAY GUEST</a
               >
               <a href="skins.html" class="page__play--skin--button">SKINS</a>
             </div>
@@ -67,18 +67,24 @@
                 >
               </form>
               <div class="login--page__sumbitbuttons">
-                <button type="submit" class="login--page__sumbitbutton">
-                  Sumbit
-                </button>
+                <p class="login--page__sumbitbutton">Sumbit</p>
               </div>
               <div class="login--page__buttons">
                 <div class="login--page__buttons--body">
-                  <button class="login--page__button--login">Login</button>
+                  <button class="login--page__button--login">LOGIN</button>
                   <button class="login--page__button--register">
-                    Register
+                    REGISTER
                   </button>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="page__account">
+            <div class="page__buttons--account">
+              <a href="main-page.html" class="button--play__page">PLAY</a>
+              <a href="Account.html" class="button--account-go__page"
+                >ACCOUNT</a
+              >
             </div>
           </div>
         </div>
