--- a/skins.html
+++ b/skins.html
@@ -40,7 +40,9 @@
                   <p class="skins__info">
                     Original DINO <br />
                     <br />
-                    Its first dino from game in chrom
+                    Dino from Chrome is a dinosaur that lives on the Internet.
+                    It helps users when they lose their connection, bringing
+                    hope.
                   </p>
                 </div>
               </div>
@@ -48,7 +50,7 @@
             <div class="skins__card">
               <div class="card">
                 <div class="card-front">
-                  <p class="skins__name--dino">COOl DINO</p>
+                  <p class="skins__name--dino">COOL DINO</p>
                   <img
                     src="skins/cool dino/Dino_cool.gif"
                     alt=""
@@ -63,7 +65,9 @@
                   <p class="skins__info">
                     COOL DINO <br />
                     <br />
-                    Its Cool dino he very cool and strong
+                    A dino with stylish glasses, always ready for an adventure,
+                    he is a true icon in the digital world where everyone
+                    looking...
                   </p>
                 </div>
               </div>
@@ -84,9 +88,11 @@
                 </div>
                 <div class="card-back">
                   <p class="skins__info">
-                    COOL DINO <br />
+                    Flower DINO<br />
                     <br />
-                    Its Cool dino he very cool and strong
+                    This Dino has blossomed in digital gardens, protecting
+                    nature and beauty in a world of unlimited code and
+                    algorithms.
                   </p>
                 </div>
               </div>
@@ -107,9 +113,11 @@
                 </div>
                 <div class="card-back">
                   <p class="skins__info">
-                    COOL DINO <br />
+                    Piviozavr DINO <br />
                     <br />
-                    Its Cool dino he very cool and strong
+                    Dino, who loves parties, dances to the rhythms of cheerful
+                    chaos on the Internet, where there are no limits to the
+                    mood.
                   </p>
                 </div>
               </div>
@@ -130,9 +138,11 @@
                 </div>
                 <div class="card-back">
                   <p class="skins__info">
-                    COOL DINO <br />
+                    Robocop DINO <br />
                     <br />
-                    Its Cool dino he very cool and strong
+                    When the code goes wrong, RoboCop Dino is always ready to
+                    protect the system from errors and put everything back in
+                    order.
                   </p>
                 </div>
               </div>
@@ -153,9 +163,10 @@
                 </div>
                 <div class="card-back">
                   <p class="skins__info">
-                    COOL DINO <br />
+                    Snow DINO <br />
                     <br />
-                    Its Cool dino he very cool and strong
+                    In winter, this Dino travels through frozen servers,
+                    clearing the digital world of snowy bugs and malfunctions.
                   </p>
                 </div>
               </div>
